--- a/ok-accounting-spring/src/main/resources/application.yml
+++ b/ok-accounting-spring/src/main/resources/application.yml
@@ -1,1 +1,21 @@
+management:
+  endpoint:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info,env
+
+spring:
+  jackson:
+    default-property-inclusion: non_null
+
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    urls:
+      - name: v1
+        url: accounting-v1.yaml
 
