--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,9 @@ openapiVersion=6.0.1
 jacksonVersion=2.13.3
 
 datetimeVersion=0.4.0
+
+
+springDocVersion=1.6.11
+springPluginVersion=1.6.21
+springBootVersion=2.7.3
+springDependencyManagementVersion=1.0.13.RELEASE
