--- a/open-api-spec/accounting-v1.yaml
+++ b/open-api-spec/accounting-v1.yaml
@@ -284,7 +284,7 @@ components:
         - $ref: '#/components/schemas/ContactRequestDebug'
         - type: object
           properties:
-            adFilter:
+            contactFilter:
               $ref: '#/components/schemas/ContactSearchFilter'
 
     ContactResponseObject:
