--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ kotlin.code.style=official
 
 kotlinVersion=1.7.10
 coroutinesVersion=1.6.4
+atomicfuVersion=0.17.3
 serializationVersion=1.3.3
 
 jUnitJupiterVersion=5.9.0
@@ -11,8 +12,12 @@ jacksonVersion=2.13.3
 
 datetimeVersion=0.4.0
 
+kafkaVersion=2.8.0
 
 springDocVersion=1.6.11
 springPluginVersion=1.6.21
 springBootVersion=2.7.3
 springDependencyManagementVersion=1.0.13.RELEASE
+
+logbackVersion=1.2.11
+kotlinLoggingJvmVersion=2.1.20
